versions/v3.7.0/doxygen/html/globals_eval_g.md
---
version: v3.7.0
source_url: https://docs.zephyrproject.org/3.7.0/doxygen/html/globals_eval_g.html
original_path: doxygen/html/globals_eval_g.html
---

| Logo | Zephyr API Documentation  3.7.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

Here is a list of all enum values with links to the files they belong to:

### - g -

- GDB\_CS : [gdbstub.h](arch_2x86_2ia32_2gdbstub_8h.md#a02deeb8532e144b369c484cdd4bc1a57acc9df508ccc4168e9f77e4054d99fd6b)
- GDB\_DS : [gdbstub.h](arch_2x86_2ia32_2gdbstub_8h.md#a02deeb8532e144b369c484cdd4bc1a57acb0bd3c78585106edca9f1f933d9e715)
- GDB\_EAX : [gdbstub.h](arch_2x86_2ia32_2gdbstub_8h.md#a02deeb8532e144b369c484cdd4bc1a57ab4c205bdcc3be6a5050e7bebd4fb6b66)
- GDB\_EBP : [gdbstub.h](arch_2x86_2ia32_2gdbstub_8h.md#a02deeb8532e144b369c484cdd4bc1a57a001777bf465ee869d25c247dd8c4916b)
- GDB\_EBX : [gdbstub.h](arch_2x86_2ia32_2gdbstub_8h.md#a02deeb8532e144b369c484cdd4bc1a57abaaf1dc478746db2a60681141fc35156)
- GDB\_ECX : [gdbstub.h](arch_2x86_2ia32_2gdbstub_8h.md#a02deeb8532e144b369c484cdd4bc1a57abee48d7c6075a3c8928ec45a8a609429)
- GDB\_EDI : [gdbstub.h](arch_2x86_2ia32_2gdbstub_8h.md#a02deeb8532e144b369c484cdd4bc1a57ade30ceaa244559a00e83b0f7a8f669a7)
- GDB\_EDX : [gdbstub.h](arch_2x86_2ia32_2gdbstub_8h.md#a02deeb8532e144b369c484cdd4bc1a57a22a0a7034fcd3674658eecef1f2dade8)
- GDB\_EFLAGS : [gdbstub.h](arch_2x86_2ia32_2gdbstub_8h.md#a02deeb8532e144b369c484cdd4bc1a57a8c5ef12c827f25bdb506a9bfd35a4fca)
- GDB\_ES : [gdbstub.h](arch_2x86_2ia32_2gdbstub_8h.md#a02deeb8532e144b369c484cdd4bc1a57a9880757bbfebbf1a4cc54fea187209b9)
- GDB\_ESI : [gdbstub.h](arch_2x86_2ia32_2gdbstub_8h.md#a02deeb8532e144b369c484cdd4bc1a57a0ee89015912e10141cd809b8d0578e6f)
- GDB\_ESP : [gdbstub.h](arch_2x86_2ia32_2gdbstub_8h.md#a02deeb8532e144b369c484cdd4bc1a57af4f770bdcdbcca2db69c917f2525ea44)
- GDB\_FS : [gdbstub.h](arch_2x86_2ia32_2gdbstub_8h.md#a02deeb8532e144b369c484cdd4bc1a57a41774764a1340a3003020ba07b90f175)
- GDB\_GS : [gdbstub.h](arch_2x86_2ia32_2gdbstub_8h.md#a02deeb8532e144b369c484cdd4bc1a57a97870647fb9b956008034d5b8f07c333)
- GDB\_LOOP\_CONTINUE : [gdbstub.h](debug_2gdbstub_8h.md#aa266df02c8e0a69322bb2a6d40670c57a7bb32aeeb3ec6d88e37bf05306cb5e4a)
- GDB\_LOOP\_ERROR : [gdbstub.h](debug_2gdbstub_8h.md#aa266df02c8e0a69322bb2a6d40670c57a00f30ed14785675b4c9f8392cf5e8077)
- GDB\_LOOP\_RECEIVING : [gdbstub.h](debug_2gdbstub_8h.md#aa266df02c8e0a69322bb2a6d40670c57ae6d3b76f57693d31a91014cb1d595f73)
- GDB\_NUM\_REGS : [gdbstub.h](arch_2arm_2gdbstub_8h.md#a0d4c0f1339778bac80a5871c979605abab4321f1e50a634d85534d73e468e97dd)
- GDB\_ORIG\_EAX : [gdbstub.h](arch_2x86_2ia32_2gdbstub_8h.md#a02deeb8532e144b369c484cdd4bc1a57a07753f9e894968bb44a885731d3c6a7c)
- GDB\_PC : [gdbstub.h](arch_2x86_2ia32_2gdbstub_8h.md#a02deeb8532e144b369c484cdd4bc1a57a22b538160b178a0438fbaf3596425086)
- GDB\_SS : [gdbstub.h](arch_2x86_2ia32_2gdbstub_8h.md#a02deeb8532e144b369c484cdd4bc1a57a1cefa340d9b999a519dbb60c18098b28)
- GETCAPS\_FORMAT\_1 : [ccc.h](group__i3c__ccc.md#ggaa22cc011b619b1819416b0aa26f85958a4d5d9ad0745a71bddbea1da09f0b49a0)
- GETCAPS\_FORMAT\_2 : [ccc.h](group__i3c__ccc.md#ggaa22cc011b619b1819416b0aa26f85958a6bb52959483be5cfc0ddc31f9a574620)
- GETCAPS\_FORMAT\_2\_CRCAPS : [ccc.h](group__i3c__ccc.md#ggadf1c0363ec0d6db7634cb03bd2d402c2a2081a7f62d3175a8b84454daf54f3484)
- GETCAPS\_FORMAT\_2\_DBGCAPS : [ccc.h](group__i3c__ccc.md#ggadf1c0363ec0d6db7634cb03bd2d402c2aaf97763f5fe2819c502e3923501c86d0)
- GETCAPS\_FORMAT\_2\_INVALID : [ccc.h](group__i3c__ccc.md#ggadf1c0363ec0d6db7634cb03bd2d402c2a2cd7e3a4d3bce532dfda07e9f9ae8c86)
- GETCAPS\_FORMAT\_2\_TESTPAT : [ccc.h](group__i3c__ccc.md#ggadf1c0363ec0d6db7634cb03bd2d402c2ae4cd2f2c4638057ae8fdcceb9d7ba740)
- GETCAPS\_FORMAT\_2\_TGTCAPS : [ccc.h](group__i3c__ccc.md#ggadf1c0363ec0d6db7634cb03bd2d402c2a494b6a8c368d34d96433041de7e7448e)
- GETCAPS\_FORMAT\_2\_VTCAPS : [ccc.h](group__i3c__ccc.md#ggadf1c0363ec0d6db7634cb03bd2d402c2ab37ceea59619902ac073183694852984)
- GETSTATUS\_FORMAT\_1 : [ccc.h](group__i3c__ccc.md#gga75934ea02ef8eb1c737da3ebfd368648ae42215e3898baa40cc90e35c5777b57b)
- GETSTATUS\_FORMAT\_2 : [ccc.h](group__i3c__ccc.md#gga75934ea02ef8eb1c737da3ebfd368648a08af2d5d884af32b46b7e0f2f429c68f)
- GETSTATUS\_FORMAT\_2\_INVALID : [ccc.h](group__i3c__ccc.md#gga1977f86d4865a97047119e5b3fbcb172a83ccf53b5520866ec71e2c0824347e19)
- GETSTATUS\_FORMAT\_2\_PRECR : [ccc.h](group__i3c__ccc.md#gga1977f86d4865a97047119e5b3fbcb172a536a82ce39767e0cd3c25ebc56974877)
- GETSTATUS\_FORMAT\_2\_TGTSTAT : [ccc.h](group__i3c__ccc.md#gga1977f86d4865a97047119e5b3fbcb172ac485e9d12c2a4855fd40ddcb6ab938eb)
- GNSS\_FIX\_QUALITY\_DGNSS : [gnss.h](group__gnss__interface.md#ggacf5a3464c487ae7609d526c73ccc758aa65df312eef5cd8b24384440629f534f8)
- GNSS\_FIX\_QUALITY\_ESTIMATED : [gnss.h](group__gnss__interface.md#ggacf5a3464c487ae7609d526c73ccc758aa851d88a47c1314eed8bc25e5cc7ba35a)
- GNSS\_FIX\_QUALITY\_FLOAT\_RTK : [gnss.h](group__gnss__interface.md#ggacf5a3464c487ae7609d526c73ccc758aaedd76bb21200df49fd82243d4a394ac6)
- GNSS\_FIX\_QUALITY\_GNSS\_PPS : [gnss.h](group__gnss__interface.md#ggacf5a3464c487ae7609d526c73ccc758aab4de07a3891e7c89d5bd23fec7add20f)
- GNSS\_FIX\_QUALITY\_GNSS\_SPS : [gnss.h](group__gnss__interface.md#ggacf5a3464c487ae7609d526c73ccc758aa316ea7e84abca8f04bbf95d3d73cea3f)
- GNSS\_FIX\_QUALITY\_INVALID : [gnss.h](group__gnss__interface.md#ggacf5a3464c487ae7609d526c73ccc758aa67256fb63beab67ba6e7cbb63916af30)
- GNSS\_FIX\_QUALITY\_RTK : [gnss.h](group__gnss__interface.md#ggacf5a3464c487ae7609d526c73ccc758aa5256b22bb56e93c788d52a641c2a15a6)
- GNSS\_FIX\_STATUS\_DGNSS\_FIX : [gnss.h](group__gnss__interface.md#gga15536308e2229a45493d06e8b61e63d9a213553f5fa30cfa99317fcc28d0af1cc)
- GNSS\_FIX\_STATUS\_ESTIMATED\_FIX : [gnss.h](group__gnss__interface.md#gga15536308e2229a45493d06e8b61e63d9a19c4e932246f410ee702122d80fbfbeb)
- GNSS\_FIX\_STATUS\_GNSS\_FIX : [gnss.h](group__gnss__interface.md#gga15536308e2229a45493d06e8b61e63d9a8ad1fb7bf9f4d2607cb86f40a901e343)
- GNSS\_FIX\_STATUS\_NO\_FIX : [gnss.h](group__gnss__interface.md#gga15536308e2229a45493d06e8b61e63d9a508bbeea1550d5020e579e6a311fbdbe)
- GNSS\_NAVIGATION\_MODE\_BALANCED\_DYNAMICS : [gnss.h](group__gnss__interface.md#ggadb734bb12433276d3014e08a1d21bb18ab7fd6073a1e7d28ebf6ae9bc51ded88d)
- GNSS\_NAVIGATION\_MODE\_HIGH\_DYNAMICS : [gnss.h](group__gnss__interface.md#ggadb734bb12433276d3014e08a1d21bb18a5f57c5f13e22a94c003f582e8c41a27f)
- GNSS\_NAVIGATION\_MODE\_LOW\_DYNAMICS : [gnss.h](group__gnss__interface.md#ggadb734bb12433276d3014e08a1d21bb18ac5f4b57f2b0f732f9ae8051cb8ac9453)
- GNSS\_NAVIGATION\_MODE\_ZERO\_DYNAMICS : [gnss.h](group__gnss__interface.md#ggadb734bb12433276d3014e08a1d21bb18a96f01438a205c0d557eb5ea4f80425ff)
- GNSS\_PPS\_MODE\_DISABLED : [gnss.h](group__gnss__interface.md#gga2b43ac2fec33053a769b7070c4ed3263a5e9af4b08bd41a1aa1bf01c0e290d9fc)
- GNSS\_PPS\_MODE\_ENABLED : [gnss.h](group__gnss__interface.md#gga2b43ac2fec33053a769b7070c4ed3263a9cdbb144191c83f4a7a2cc27268eacfa)
- GNSS\_PPS\_MODE\_ENABLED\_AFTER\_LOCK : [gnss.h](group__gnss__interface.md#gga2b43ac2fec33053a769b7070c4ed3263a2df416ad912a84135eff1e30977b4507)
- GNSS\_PPS\_MODE\_ENABLED\_WHILE\_LOCKED : [gnss.h](group__gnss__interface.md#gga2b43ac2fec33053a769b7070c4ed3263afc82bd9ebcfd9d3b6111c9e82fc79ecc)
- GNSS\_SYSTEM\_BEIDOU : [gnss.h](group__gnss__interface.md#gga928a05b4e820a9fcc8bc2db81f5f8c79a25a0162daa071267b63d2c7331a46c55)
- GNSS\_SYSTEM\_GALILEO : [gnss.h](group__gnss__interface.md#gga928a05b4e820a9fcc8bc2db81f5f8c79a1456923f0dd999b26e167fccc2461d5c)
- GNSS\_SYSTEM\_GLONASS : [gnss.h](group__gnss__interface.md#gga928a05b4e820a9fcc8bc2db81f5f8c79a6f5a6de0d8196df55ade83d1f09de7dd)
- GNSS\_SYSTEM\_GPS : [gnss.h](group__gnss__interface.md#gga928a05b4e820a9fcc8bc2db81f5f8c79a84d3fc7ebefad4b20c58335bb7ca3e33)
- GNSS\_SYSTEM\_IMES : [gnss.h](group__gnss__interface.md#gga928a05b4e820a9fcc8bc2db81f5f8c79a6a216ab95d09806435af4257b4d189e9)
- GNSS\_SYSTEM\_IRNSS : [gnss.h](group__gnss__interface.md#gga928a05b4e820a9fcc8bc2db81f5f8c79a833e14eb77d70b3c5eb2843026b63242)
- GNSS\_SYSTEM\_QZSS : [gnss.h](group__gnss__interface.md#gga928a05b4e820a9fcc8bc2db81f5f8c79aac9ccafec388c071468ef16981679dff)
- GNSS\_SYSTEM\_SBAS : [gnss.h](group__gnss__interface.md#gga928a05b4e820a9fcc8bc2db81f5f8c79a3e759b71b7e531d6c2c3068108e263dd)

- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/3.7.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
